Timestamp gt, Executor, Results
