# src/main/java/ca/rbon/grunner/api/BatchesApiController.java
@@ -1,8 +1,10 @@
 package ca.rbon.grunner.api;
 
+import ca.rbon.grunner.api.model.BatchResult;
 import ca.rbon.grunner.api.model.BatchStatus;
 import ca.rbon.grunner.api.model.BatchStatusUpdate;
 import ca.rbon.grunner.state.BatchDAO;
+import ca.rbon.grunner.state.BatchMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
@@ -14,9 +16,9 @@ import org.springframework.web.server.ResponseStatusException;
 
 import javax.script.ScriptException;
 import javax.validation.Valid;
-import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.toList;
@@ -33,28 +35,38 @@ public class BatchesApiController implements BatchesApi {
 
   final BatchDAO batchDAO;
 
-  public BatchesApiController(NativeWebRequest request, BatchDAO batchDAO/* , BatchMapper batchMapper */) {
+  final BatchMapper batchMapper;
+
+  public BatchesApiController(NativeWebRequest request, BatchDAO batchDAO,/* , BatchMapper batchMapper */BatchMapper batchMapper) {
     this.request = request;
     this.batchDAO = batchDAO;
+    this.batchMapper = batchMapper;
   }
 
   @Override
-  public ResponseEntity<Void> cancelBatch(String batchId) {
+  public ResponseEntity<BatchResult> batchResults(UUID batchId) {
+    return ok(batchDAO.batchResult(batchId)
+            .map(batchMapper::resultFromEventRecord)
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND)));
+  }
+
+  @Override
+  public ResponseEntity<Void> cancelBatch(UUID batchId) {
     var user = request.getRemoteUser();
     var cancelResult = batchDAO.cancelUserBatch(user, batchId);
     return switch (cancelResult) {
-    case OK_JOB_CANCELLED -> ResponseEntity.noContent().build();
-    case ERR_JOB_NOT_FOUND -> throw new ResponseStatusException(HttpStatus.NOT_FOUND);
-    case ERR_JOB_NOT_PENDING -> throw new ResponseStatusException(HttpStatus.FORBIDDEN);
+      case OK_JOB_CANCELLED -> ResponseEntity.noContent().build();
+      case ERR_JOB_NOT_FOUND -> throw new ResponseStatusException(HttpStatus.NOT_FOUND);
+      case ERR_JOB_NOT_PENDING -> throw new ResponseStatusException(HttpStatus.FORBIDDEN);
     };
   }
 
   @Override
-  public ResponseEntity<String> enqueueBatch(@Valid String body) {
+  public ResponseEntity<UUID> enqueueBatch(@Valid String body) {
     try {
       var user = request.getRemoteUser();
-      var newBatch = batchDAO.appendBatch(user, body);
-      return accepted().body(newBatch);
+      var newBatchId = batchDAO.appendBatch(user, body);
+      return accepted().body(newBatchId);
     } catch (ScriptException se) {
       throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
           String.format("Script Error at Line [%d] Column [%d]:\n\t%s",
@@ -65,17 +77,9 @@ public class BatchesApiController implements BatchesApi {
   @Override
   public ResponseEntity<List<BatchStatusUpdate>> listBatchs(@Valid Optional<BatchStatus> status) {
     var user = request.getRemoteUser();
-    return ok(batchDAO.listUserBatchLastStatus(user, status).flatMap(rec -> {
-      var recstatus = BatchStatus.valueOf(rec.component2());
-      if (recstatus == null) {
-        LOG.error("Unmapped status {} for batch {}", rec.component2(), rec.component1());
-        return Stream.empty();
-      }
-      var upd = new BatchStatusUpdate();
-      upd.setBatchId(rec.component1());
-      upd.setStatus(recstatus);
-      upd.setTimestamp(rec.component3().atOffset(ZoneOffset.UTC));
-      return Stream.of(upd);
-    }).collect(toList()));
+    var batchEventStatus = status.map(batchMapper::eventStatusFromStatus);
+    return ok(batchDAO.listUserBatchLastStatus(user, batchEventStatus)
+            .flatMap(rec -> Stream.of(batchMapper.statusUpdateFromEventRecord(rec)))
+            .collect(toList()));
   }
 }
